--- a/src/styles/moviecard.css
+++ b/src/styles/moviecard.css
@@ -17,7 +17,7 @@
   
 }
 .movie-card {
-  width: 330px;
+  width: 300px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -149,6 +149,18 @@
   font-size: 18px;
   width: 100%;
   text-decoration: none;
+}
+.addtofav-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 18px;
+  width: 100%;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .view-movie-btn:hover {
